# libxdsettings

./: AUTHORS  CMakeLists.txt  COPYING  desktopsettings.cpp  desktopsettings.h
cmake/: xdsettings-config.cmake.in
